[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy_persist"
version = "0.0.1"
authors = [
  { name="Oleg Tendler", email="kursluzz@yandex.ru" },
]
description = "An easy to use filesystem storage. Based on sqlite and picle."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/easy_persist"
"Bug Tracker" = "https://github.com/pypa/easy_persist/issues"
